@@ -141,7 +141,7 @@ Other changes:
 * New tasks <bzip2> and <bunzip2> to pack and unpack files using the 
   BZip2 alogrithm.
 
-* New tasks <replaceregexp>, <checksum>, <translate>, <waitfor>, <input>,
+* New tasks <replaceregexp>, <checksum>, <translate>, <waitfor>, 
   <manifest>, <vsscp>, <vssadd>, <vsscreate>, <splash>, <basename>, <dirname>,
   <concat>.
 
@@ -328,6 +328,14 @@ Other changes:
   generated by tests will be sent to Ant's logging system as well as
   to the formatters (instead of sending it to the formatters
   exclusively).
+
+* Ant has now a pluggable way to prompt users for input, which is used
+  by the new <input> task.  IDE integrators can provide an
+  implementation of the InputHandler interface to decouple Ant's input
+  from the console.  An implementation that gets its input from a file
+  for unattended builds is part of Ant's distribution.
+
+  For more details see docs/manual/inputhandler.html.
 
 Changes from Ant 1.4 to Ant 1.4.1
 ===========================================
